automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -47,6 +47,7 @@
     "hex_script = '767695935687'\n",
     "\n",
     "# bytes.fromhex the script\n",
+    "bin_script =bytes.fromhex(hex_)\n",
     "# parse the script"
    ]
   },
