automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -38,17 +38,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OP_DUP OP_DUP OP_MUL OP_ADD OP_6 OP_EQUAL \n"
+     ]
+    }
+   ],
    "source": [
     "from script import Script\n",
     "\n",
     "hex_script = '767695935687'\n",
     "\n",
     "# bytes.fromhex the script\n",
-    "bin_script =bytes.fromhex(hex_)\n",
-    "# parse the script"
+    "bin_script =bytes.fromhex(hex_script)\n",
+    "# parse the script\n",
+    "print(Script.parse(bin_script))"
    ]
   },
   {
@@ -79,6 +88,7 @@
     "hex_script = '6e879169a77ca787'\n",
     "\n",
     "# bytes.fromhex the script\n",
+    "\n",
     "# parse the script"
    ]
   },
