automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -88,8 +88,9 @@
     "hex_script = '6e879169a77ca787'\n",
     "\n",
     "# bytes.fromhex the script\n",
-    "\n",
-    "# parse the script"
+    "bin_script = bytes.fromhex(hex_script)\n",
+    "# parse the script\n",
+    "print(Script.parse(b))"
    ]
   },
   {
