--- a/index.ipynb
+++ b/index.ipynb
@@ -77,9 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OP_2DUP OP_EQUAL OP_NOT OP_VERIFY OP_SHA1 OP_SWAP OP_SHA1 OP_EQUAL \n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2.1\n",
     "\n",
@@ -90,7 +98,7 @@
     "# bytes.fromhex the script\n",
     "bin_script = bytes.fromhex(hex_script)\n",
     "# parse the script\n",
-    "print(Script.parse(b))"
+    "print(Script.parse(bin_script))"
    ]
   },
   {
