automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,10 @@
     "        # iterate outputs\n",
     "            # serialize each output\n",
     "        # serialize locktime (4 bytes, little endian)\n",
-    "        pass"
+    "        pass\n",
+    "    \n",
+    "class TxIn(TxIn):\n",
+    "    def "
    ]
   },
   {
