automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -198,7 +198,10 @@
     "        pass\n",
     "    \n",
     "class TxIn(TxIn):\n",
-    "    def "
+    "    def serialize(self):\n",
+    "        pass\n",
+    "    \n",
+    "class TxOut(TxOut):"
    ]
   },
   {
