automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -176,7 +176,7 @@
    "source": [
     "import requests\n",
     "from io import BytesIO\n",
-    "from tx import Tx\n",
+    "from tx import Tx, t\n",
     "from helper import (\n",
     "    encode_varint,\n",
     "    int_to_little_endian,\n",
@@ -201,7 +201,9 @@
     "    def serialize(self):\n",
     "        pass\n",
     "    \n",
-    "class TxOut(TxOut):"
+    "class TxOut(TxOut):\n",
+    "    def serialize(self):\n",
+    "        pass"
    ]
   },
   {
