automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -176,7 +176,7 @@
    "source": [
     "import requests\n",
     "from io import BytesIO\n",
-    "from tx import Tx, t\n",
+    "from tx import Tx, TxIn, TxOut\n",
     "from helper import (\n",
     "    encode_varint,\n",
     "    int_to_little_endian,\n",
@@ -196,14 +196,7 @@
     "            # serialize each output\n",
     "        # serialize locktime (4 bytes, little endian)\n",
     "        pass\n",
-    "    \n",
-    "class TxIn(TxIn):\n",
-    "    def serialize(self):\n",
-    "        pass\n",
-    "    \n",
-    "class TxOut(TxOut):\n",
-    "    def serialize(self):\n",
-    "        pass"
+    "    \n"
    ]
   },
   {
