automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,6 +182,14 @@
     "    int_to_little_endian,\n",
     "    little_endian_to_int\n",
     ")\n",
+    "\n",
+    "class TxIn(TxIn):\n",
+    "    def serialize(self):\n",
+    "        pass\n",
+    "    \n",
+    "class TxOut(TxOut):\n",
+    "    def serialize(self):\n",
+    "        pass\n",
     "\n",
     "class Tx(Tx):\n",
     "\n",
@@ -205,6 +213,13 @@
    "source": [
     "One thing that might be interesting to note is that the transaction fee is not specified anywhere! This is because it’s an implied amount. It’s the total of the inputs amounts minus the total of the output amounts."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
