automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,7 @@
     "    def serialize(self):\n",
     "        '''Returns the byte serialization of the transaction'''\n",
     "        # serialize version (4 bytes, little endian)\n",
-    "        \n",
+    "        result = int_to_little\n",
     "        # encode_varint on the number of inputs\n",
     "        # iterate inputs\n",
     "            # serialize each input\n",
