--- a/index.ipynb
+++ b/index.ipynb
@@ -188,8 +188,9 @@
     "    def serialize(self):\n",
     "        '''Returns the byte serialization of the transaction'''\n",
     "        # serialize version (4 bytes, little endian)\n",
-    "        result = int_to_little\n",
+    "        result = int_to_little_endian(self.version, 4)\n",
     "        # encode_varint on the number of inputs\n",
+    "        result += encode_vari\n",
     "        # iterate inputs\n",
     "            # serialize each input\n",
     "        # encode_varint on the number of outputs\n",
