--- a/index.ipynb
+++ b/index.ipynb
@@ -190,8 +190,9 @@
     "        # serialize version (4 bytes, little endian)\n",
     "        result = int_to_little_endian(self.version, 4)\n",
     "        # encode_varint on the number of inputs\n",
-    "        result += encode_vari\n",
+    "        result += encode_varint(len(self.tx_ins))\n",
     "        # iterate inputs\n",
+    "        for tx_in in \n",
     "            # serialize each input\n",
     "        # encode_varint on the number of outputs\n",
     "        # iterate outputs\n",
