--- a/index.ipynb
+++ b/index.ipynb
@@ -192,8 +192,9 @@
     "        # encode_varint on the number of inputs\n",
     "        result += encode_varint(len(self.tx_ins))\n",
     "        # iterate inputs\n",
-    "        for tx_in in \n",
+    "        for tx_in in self.tx_ins:\n",
     "            # serialize each input\n",
+    "            result += tx_in.serialize\n",
     "        # encode_varint on the number of outputs\n",
     "        # iterate outputs\n",
     "            # serialize each output\n",
