automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -194,9 +194,11 @@
     "        # iterate inputs\n",
     "        for tx_in in self.tx_ins:\n",
     "            # serialize each input\n",
-    "            result += tx_in.serialize\n",
+    "            result += tx_in.serialize()\n",
     "        # encode_varint on the number of outputs\n",
+    "        result += encode_varint(len(self.tx_outs))\n",
     "        # iterate outputs\n",
+    "        for tx_\n",
     "            # serialize each output\n",
     "        # serialize locktime (4 bytes, little endian)\n",
     "        pass\n",
