automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -198,8 +198,9 @@
     "        # encode_varint on the number of outputs\n",
     "        result += encode_varint(len(self.tx_outs))\n",
     "        # iterate outputs\n",
-    "        for tx_\n",
+    "        for tx_out in self.tx_outs:\n",
     "            # serialize each output\n",
+    "            result += tx_out.serialize()\n",
     "        # serialize locktime (4 bytes, little endian)\n",
     "        pass\n",
     "    \n"
