automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -202,6 +202,7 @@
     "            # serialize each output\n",
     "            result += tx_out.serialize()\n",
     "        # serialize locktime (4 bytes, little endian)\n",
+    "        result += int_to_little_endian(self.)\n",
     "        pass\n",
     "    \n"
    ]
