automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,8 +202,8 @@
     "            # serialize each output\n",
     "            result += tx_out.serialize()\n",
     "        # serialize locktime (4 bytes, little endian)\n",
-    "        result += int_to_little_endian(self.)\n",
-    "        pass\n",
+    "        result += int_to_little_endian(self.locktime, 4)\n",
+    "        return result\n",
     "    \n"
    ]
   },
